Allow a specialized conformance to fail

This handles the case where a conditional conformance cannot be
inherited because the subclass provides a generic argument that
doesn't satisfy the conditional requirements.

https://bugs.swift.org/browse/SR-7337